objects/Book_Penalty__c.object
<CustomObject>
    <description>Force.com Dev Handbokk Dev 401
This is a child object on Customer and stores the amount of late fees paid to the customer.</description>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Customer__r.Customer_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Book Penalties</relationshipLabel>
        <relationshipName>Book_Penalties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fine_Amount__c</fullName>
        <label>Fine Amount</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Book Penalty</label>
    <nameField>
        <label>Book Penalty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Book Penalties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>